--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/body-parser": "^1.19.4",
     "@types/node": "^20.8.9",
     "express": "^4.18.2",
+    "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
