--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.4",
     "@types/node": "^20.8.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
