--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
+    "request": "^2.88.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
