--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/body-parser": "^1.19.4",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.8.9",
     "@types/uuid": "^9.0.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
+    "multer": "1.4.5-lts.1",
     "request": "^2.88.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
