--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/uuid": "^9.0.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "luxon": "^3.4.4",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "multer": "1.4.5-lts.1",
